fix: contentBox overflow-y

--- a/deslrey-admin/src/pages/Admin/index.module.scss
+++ b/deslrey-admin/src/pages/Admin/index.module.scss
@@ -15,7 +15,7 @@
         display: flex;
         justify-content: space-around;
         width: 100%;
-        height: 100%;
+        height: 90%;
 
         .sideBox {
             display: flex;
